# nimbos

./: .gitignore  README.md  targets.txt
kernel/: Cargo.toml  Makefile  build.rs
kernel/.cargo/: config
kernel/src/: config.rs  console.rs  entry.rs  gicv2.rs  lang_items.rs  linker.ld  loader.rs  logging.rs  main.rs  percpu.rs  pl011.rs  structs.rs  timer.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: config.rs  consts.rs  context.rs  instructions.rs  linker.ld  mod.rs  page_table.rs  trap.rs
kernel/src/arch/riscv/: context.rs  instructions.rs  mod.rs  trap.rs
kernel/src/arch/x86_64/: config.rs  consts.rs  context.rs  gdt.rs  idt.rs  instructions.rs  linker.ld  mod.rs  page_table.rs  percpu.rs  syscall.rs  trap.S  trap.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/interrupt/: apic.rs  gicv2.rs  mod.rs  plic.rs
kernel/src/drivers/misc/: mod.rs  (+3 more)
kernel/src/ipc/: data_pool.rs  mod.rs  structs.rs  syscall.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  paging.rs  uaccess.rs
kernel/src/platform/: mod.rs
kernel/src/scf/: allocator.rs  mod.rs  queue.rs  syscall.rs
kernel/src/sync/: mod.rs  spin.rs
kernel/src/syscall/: fs.rs  mod.rs  task.rs  time.rs
kernel/src/task/: manager.rs  mod.rs  percpu.rs  schedule.rs  structs.rs  switch.rs
kernel/src/trap/: mod.rs
kernel/src/utils/: allocator.rs  irq_handler.rs  mod.rs
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config
os/src/: arch.rs  batch.rs  config.rs  console.rs  entry.rs  gicv2.rs  linker.ld  loader.rs  main.rs  pl011.rs  psci.rs  timer.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  uaccess.rs
os/src/sync/: lazy_init.rs  mod.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  task.rs
os/src/task/: manager.rs  mod.rs  percpu.rs  schedule.rs  structs.rs  switch.rs
os/src/trap/: context.rs  mod.rs  trap.S
os/src/utils/: allocator.rs  mod.rs
(+60 files in other folders)
