[package]
name = "nimbos"
version = "0.1.0"
authors = ["Yuekai Jia <equation618@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
platform-pc = []
platform-qemu-virt-arm = []
default = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "1.3"
xmas-elf = "0.8"
buddy_system_allocator = { version = "0.8", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.47"
x86_64 = "0.14"

[target.'cfg(target_arch = "aarch64")'.dependencies]
tock-registers = "0.7"
cortex-a = "7.0"
