[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>", "Yuekai Jia <equation618@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.7"
cortex-a = "7.0"
bitflags = "1.3"
xmas-elf = "0.8"
buddy_system_allocator = { version = "0.8", default-features = false }
